# thinking-with-types

./: README.md  ch01_01.4-ii.hs  ch01_01.4-iii.hs  ch02_02.4-i.hs  ch03_03-i.hs  ch05_05.3-i_ii.hs  ch05_05.3-iii.hs  ch06_06.4-i_ii_iii.hs  ch06_06.4-iv.hs  ch07_07.1-ii.hs  ch07_07.1-iii.hs  ch09_09.2.example.hs  ch10_10.0.example.hs  ch10_10.1-i.hs  ch10_10.2-i.hs  ch10_10.2-ii.hs  ch10_10.4-i.hs  ch11_11.2-i.hs  ch11_11.3-i_ii.hs  ch12_12.i.hs  ch12_12.ii.hs  ch13_13.2-i.hs  ch13_13.2-ii.hs  ch13_13.3.example.hs  ch14_14.1.example.hs  ch15_15.0.example.hs  ch15_15.3-i.hs  ch15_15.4-i.hs  ch15_15.5-i.hs  ch15_15.5.1.example.hs  fourmolu.yaml  thinking.cabal
